[project]
authors = [{ email = "contact@linkup.so", name = "LINKUP TECHNOLOGIES" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "A Langchain integration for the Linkup API"
keywords = ["api", "integration", "langchain", "linkup", "retriever", "search"]
license = "MIT"
name = "langchain-linkup"
readme = "README.md"
requires-python = ">=3.10,<4.0"
version = "0.2.0"

dependencies = ["langchain-core", "linkup-sdk>=0.11.0"]

[project.optional-dependencies]
build = ["uv>=0.10.0,<0.11.0"] # For python-semantic-release build command, used in GitHub actions

[dependency-groups]
dev = [
  "langchain-openai",
  "langchain-tests",
  "langgraph",
  "load-dotenv",
  "mypy",
  "prek>=0.3.5",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "pytest-socket",
  "setuptools",
  "types-setuptools",
]

[project.urls]
Documentation = "https://github.com/LinkupPlatform/langchain-linkup#readme"
Homepage = "https://github.com/LinkupPlatform/langchain-linkup"
Source = "https://github.com/LinkupPlatform/langchain-linkup"
Tracker = "https://github.com/LinkupPlatform/langchain-linkup/issues"

[tool.mypy]
exclude = ['^tests/']
strict = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto" # Prevent some async tests in langchain-tests to be skipped

[tool.coverage.report]
exclude_also = ["raise TypeError", "raise ValueError"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "S", # flake8-bandit
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/test_*.py" = ["S101"] # Use of assert detected

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_linkup"]

[tool.semantic_release]
allow_zero_version = true
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
commit_message = "chore: release v{version}\n\nAutomatically generated by python-semantic-release\n\n[skip ci]" # [skip ci] is needed to avoid recursively calling the release CI
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.commit_parser_options]
parse_squash_commits = false

[tool.uv]
exclude-newer = "2 weeks" # Reduce risks of supply chain attacks
required-version = ">=0.10.0,<0.11.0"
